--- a/src/StudentEditProfile.css
+++ b/src/StudentEditProfile.css
@@ -25,18 +25,21 @@
 .profile-avatar {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-bottom: 20px;
-}
-
-.avatar-circle {
   width: 80px;
   height: 80px;
   background-color: #f2f2f2;
   border-radius: 50%;
+}
+
+.avatar-circle {
+  width: 40px;
+  height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 35px;
+  font-size: 3px;
 }
 
 .inputContainer {
