--- a/src/AdminStudentRequest.css
+++ b/src/AdminStudentRequest.css
@@ -14,7 +14,7 @@
 }
 
 .visits-table {
-    width: 100%;
+    width: max-content;
     border-collapse: collapse;
     background: white;
     border-radius: 8px;
@@ -64,11 +64,10 @@
     font-style: italic;
 }
 
-section{
-    overflow: auto;
+td, th{
+    width: max-content;
 }
 
-    .visits-table {
-        overflow-x: auto;
-        display: block;
-    }
+section{
+    overflow-x: auto;
+}
