--- a/src/AdminCompanyList.css
+++ b/src/AdminCompanyList.css
@@ -3,15 +3,14 @@
     padding: 30px;
     background-color: hsl(210, 17%, 98%);
     min-height: 100vh;
-
     height: fit-content;
     width: calc(100% - 16rem);
-  margin-left: 15rem;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  padding: 2rem;
-  margin-top: 6rem;
-  border-radius: 20px;
-  background: #fff;
+    margin-left: 15rem;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    padding: 2rem;
+    margin-top: 6rem;
+    border-radius: 20px;
+    background: #fff;
 }
 
 .companies-page-heading {
@@ -161,4 +160,21 @@ section{
 
 .pagination-arrow:hover {
     background-color: #f0f0f0;
+}
+
+@media (max-width: 768px) {
+    .manage-companies-container {
+        width: 100%;
+        margin: 4.5rem 0.5rem 1rem;
+        padding: 1.5rem;
+    }
+
+    .filter-options {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    section {
+        margin-top: 1rem;
+    }
 }
