--- a/src/StudentVisitsManagement.css
+++ b/src/StudentVisitsManagement.css
@@ -5,7 +5,8 @@
   margin-left: 15rem;
   margin-top: 6rem;
   border-radius: 20px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);}
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
 
 .student-visits .container {
   max-width: 1200px;
@@ -144,7 +145,9 @@
 /* Responsive */
 @media (max-width: 768px) {
   .student-visits {
-    padding: 10px;
+    width: 100%;
+    margin: 4.5rem 0.5rem 1rem;
+    padding: 1.5rem;
   }
   
   .student-visits .header {
