--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,11 @@
 
 body{
     padding: .5rem;
-    height: 100vh;
-    width: 100vw;
     overflow-x: hidden;
+}
 
+@media (max-width: 768px) {
+    body {
+        padding: 0.5rem 0.25rem;
+    }
 }
